--- a/contact.html
+++ b/contact.html
@@ -3,6 +3,7 @@
   <head>
     <title>Cards</title>
     <link rel="stylesheet" href="styles2.css"/>
+    
   </head>
   <div class="heading1">
     <h1>Three Days Grace Discography</h1>
@@ -13,7 +14,7 @@
 
       <div class="card">
         <div>
-          <img class="image"src="/Images/tdgoutsider.jpg">
+          <img class="image"src="/Images/tdgoutsider.jpg" width="400px" height="400px">
         </div>
         <div class="title">
           <h1>Outsider (2018)</h1>
@@ -27,7 +28,7 @@
 
       <div class="card">
         <div>
-          <img class="image" src="/Images/tdghuman.jpg">
+          <img class="image" src="/Images/tdghuman.jpg" width="400px" height="400px">
         </div>
         <div class="title">
           <h1>Human (2015)</h1>
@@ -41,7 +42,7 @@
 
       <div class="card">
         <div>
-          <img class="image" src="Images/tdgtransit.jpg">
+          <img class="image" src="Images/tdgtransit.jpg" width="400px" height="400px">
         </div>
         <div class="title">
           <h1>Transit of Venus (2012)</h1>
@@ -55,7 +56,7 @@
 
       <div class="card">
         <div>
-          <img class="image" src="Images/tdgLife.png">
+          <img class="image" src="Images/tdgLife.png" width="400px" height="400px">
         </div>
         <div class="title">
           <h1>Life Starts Now (2009)</h1>
@@ -69,33 +70,33 @@
 
       <div class="card">
         <div>
-          <img class="image" src="Images/tdgOne_X.png">
+          <img class="image" src="Images/tdgOne_X.png" width="400px" height="400px">
         </div>
         <div class="title">
           <h1>One X (2006)</h1>
         </div>
         <div class="des">
-          <p>The second album, with Barry Stock taking over lead guitar from Adam Gontier</p>
-          <button>Read More...</button>
+          <p>Barry Stock takes over lead guitar from Adam Gontier</p>
+          <button> <a href="https://threedaysgrace.com/music/one-x/" style="color: white;">More</a></button>
         </div>
       </div>
       <!--cards -->
 
       <div class="card">
         <div>
-          <img class="image" src="Images/tdgselftitled.jpeg">
+          <img class="image" src="Images/tdgselftitled.jpeg" width="400px" height="400px">
         </div>
         <div class="title">
           <h1>Three Days Grace (2003)</h1>
         </div>
         <div class="des">
-          <p>The debut, self-titled album, with </p>
-          <button>Read More...</button>
+          <p>Self-titled debut, with song "I Hate Everything About You</p>
+          <button><a href="https://threedaysgrace.com/music/three-days-grace/" style="color: white;">More</a></button>
         </div>
       </div>
       <!--cards -->
       <br>
 
-     <button class="button2">My Button</button>
+     <button onclick="window.location.href='/contact2.html'"> Continue </button>
   </body>
 </html>
