3rd commit, new info

--- a/contact2.html
+++ b/contact2.html
@@ -3,9 +3,14 @@
   <head>
     <title>Cards</title>
     <link rel="stylesheet" href="styles2.css"/>
+    <style>
+        body {
+            background-image: url(/Images/Disturbed/theguybg.jpeg);
+        }
+    </style>
   </head>
   <div class="heading1">
-    <h1>Disturbed Discography</h1>
+    <h1 style=color:white>Disturbed Discography</h1>
   </div>
    <body>
     <div class="main">
@@ -13,131 +18,132 @@
 
       <div class="card">
         <div>
-          <img class="image" src="/Images/Disturbed_-_Evolution_(album_cover).jpg" width="400px" height="400px">
+          <img class="image" src="/Images/Disturbed/Disturbed_-_Evolution_(album_cover).jpg" width="400px" height="400px">
         </div>
         <div class="title">
           <h1>Evolution (2018)</h1>
         </div>
         <div class="des">
           <p>The latest album, boasting a lighter but no less powerful sound</p>
-          <button> <a href="https://threedaysgrace.com/music/outsider/" style="color: white;">More</a></button>
+          <button> <a href="https://disturbed.lnk.to/evolution/spotify" style="color: white;">More</a></button>
         </div>
       </div>
       <!--cards -->
 
       <div class="card">
         <div>
-          <img class="image" src="/Images/disturbedredrocks.jpg" width="400px" height="400px">
+          <img class="image" src="/Images/Disturbed/disturbedredrocks.jpg" width="400px" height="400px">
         </div>
         <div class="title">
           <h1>Live at Red Rocks (2016)</h1>
         </div>
         <div class="des">
           <p>A collection of Disturbed's most famous songs, performed at Red Rocks Ampitheatre</p>
-          <button><a href="https://threedaysgrace.com/music/human/" style="color: white;">More</a></button>
+          <button><a href="https://disturbed.lnk.to/liveatredrocks/spotify" style="color: white;">More</a></button>
         </div>
       </div>
       <!--cards -->
 
       <div class="card">
         <div>
-          <img class="image" src="Images/disturbedimmortalized.jpeg" width="400px" height="400px">
+          <img class="image" src="Images/Disturbed/disturbedimmortalized.jpeg" width="400px" height="400px">
         </div>
         <div class="title">
           <h1>Immortalized (2015)</h1>
         </div>
         <div class="des">
           <p>Featuring the title track "Immortalized", as well as a cover of Simon and Garfunkel's "The Sound of Silence"</p>
-          <button> <a href="https://threedaysgrace.com/music/transit-of-venus/" style="color: white;">More</a></button>
+          <button> <a href="https://disturbed.lnk.to/immortalized/spotify" style="color: white;">More</a></button>
         </div>
       </div>
       <!--cards -->
 
       <div class="card">
         <div>
-          <img class="image" src="Images/disturbedlostchildren.webp" width="400px" height="400px">
+          <img class="image" src="Images/Disturbed/disturbedlostchildren.webp" width="400px" height="400px">
         </div>
         <div class="title">
           <h1>The Lost Children (2011)</h1>
         </div>
         <div class="des">
           <p>A collection of B-side songs, including a cover of "Living After Midnight" by Judas Priest</p>
-          <button> <a href="https://threedaysgrace.com/music/life-starts-now/" style="color: white;">More</a></button>
+          <button> <a href="https://disturbed.lnk.to/thelostchildren/spotify" style="color: white;">More</a></button>
         </div>
       </div>
       <!--cards -->
 
       <div class="card">
         <div>
-          <img class="image" src="Images/disturbedasylum.jpeg" width="400px" height="400px">
+          <img class="image" src="Images/Disturbed/disturbedasylum.jpeg" width="400px" height="400px">
         </div>
         <div class="title">
           <h1>Asylum (2010)</h1>
         </div>
         <div class="des">
           <p> More mature themes mark the band's evolution (hehe), as stated by lead singer David Draiman</p>
-          <button> <a href="https://threedaysgrace.com/music/one-x/" style="color: white;">More</a></button>
+          <button> <a href="https://disturbed.lnk.to/asylum/spotify" style="color: white;">More</a></button>
         </div>
       </div>
       <!--cards -->
 
       <div class="card">
         <div>
-          <img class="image" src="Images/disturbedindestructible.jpg" width="400px" height="400px">
+          <img class="image" src="Images/Disturbed/disturbedindestructible.jpg" width="400px" height="400px">
         </div>
         <div class="title">
           <h1>Indestructible (2008)</h1>
         </div>
         <div class="des">
           <p>The first self-produced album, produced by lead guitarist Dan Donegan</p>
-          <button><a href="https://threedaysgrace.com/music/three-days-grace/" style="color: white;">More</a></button>
+          <button><a href="https://disturbed.lnk.to/indestructible/spotify" style="color: white;">More</a></button>
         </div>
       </div>
       <!--cards -->
 
       <div class="card">
         <div>
-          <img class="image" src="Images/disturbed10kfists.jpg" width="400px" height="400px">
+          <img class="image" src="Images/Disturbed/disturbed10kfists.jpg" width="400px" height="400px">
         </div>
         <div class="title">
           <h1>Ten Thousand Fists (2005)</h1>
         </div>
         <div class="des">
           <p>The second consecutive number 1 release on the Billboard 200, featuring title song "Ten Thousand Fists"</p>
-          <button><a href="https://threedaysgrace.com/music/three-days-grace/" style="color: white;">More</a></button>
+          <button><a href="https://disturbed.lnk.to/tenthousandfists/spotify" style="color: white;">More</a></button>
         </div>
       </div>
       <!--cards -->
 
       <div class="card">
         <div>
-          <img class="image" src="Images/disturbedbelieve.jpeg" width="400px" height="400px">
+          <img class="image" src="Images/Disturbed/disturbedbelieve.jpeg" width="400px" height="400px">
         </div>
         <div class="title">
           <h1>Believe (2002)</h1>
         </div>
         <div class="des">
-          <p>Songs on "Believe" feature religious and spiritual themes as a result of contemporary events, to compliment the album cover's combination of different religious symbols, meant to represent unity</p>
-          <button><a href="https://threedaysgrace.com/music/three-days-grace/" style="color: white;">More</a></button>
+          <p>Songs on "Believe" feature religious and spiritual themes as a result of contemporary global and personal events. The band begins to focus on melodic composition, setting the precedent for albums to come</p>
+          <button><a href="https://disturbed.lnk.to/believe/spotify" style="color: white;">More</a></button>
         </div>
       </div>
       <!--cards -->
 
       <div class="card">
         <div>
-          <img class="image" src="Images/disturbedsickness.jpeg" width="400px" height="400px">
+          <img class="image" src="Images/Disturbed/disturbedsickness.jpeg" width="400px" height="400px">
         </div>
         <div class="title">
           <h1>The Sickness (2000)</h1>
         </div>
         <div class="des">
-          <p>The band's debut album, with insanely popular song "Down with the Sickness", the band's first single to be certified platinum. The album itself has been certified five times platinum and is the band's most successful album</p>
-          <button><a href="https://threedaysgrace.com/music/three-days-grace/" style="color: white;">More</a></button>
+          <p>The band's debut album, with insanely popular song "Down with the Sickness". The album itself has been certified five times platinum and is the band's most successful album</p>
+          <button><a href="https://disturbed.lnk.to/thesickness/spotify" style="color: white;">More</a></button>
         </div>
       </div>
       <!--cards -->
       <br>
 
-     <button onclick="window.location.href='/contact2.html'"> Continue </button>
+     <button onclick="window.location.href='/contact.html'"> Three Days Grace </button>
+     <button onclick="window.location.href='/contact3.html'"> Linkin Park </button>
   </body>
 </html>
