--- a/contact.html
+++ b/contact.html
@@ -3,18 +3,27 @@
   <head>
     <title>Cards</title>
     <link rel="stylesheet" href="styles2.css"/>
-    
+    <style>
+      body {
+        background-image: url(/Images/TDG/tdgbackground.jpg); background-size: cover;
+      }
+    </style>
   </head>
   <div class="heading1">
     <h1>Three Days Grace Discography</h1>
   </div>
+  <ul>
+    <li><a class="active" href="contact.html"> Three Days Grace</a></li>
+    <li><a href="contact2.html"> Disturbed</a></li>
+    <li><a href="contact3.html"> Linkin Park</a></li>
+  </ul>
    <body>
     <div class="main">
       <!--cards --> 
 
       <div class="card">
         <div>
-          <img class="image"src="/Images/tdgoutsider.jpg" width="400px" height="400px">
+          <img class="image" src="/Images/TDG/tdgoutsider.jpg" width="400px" height="400px">
         </div>
         <div class="title">
           <h1>Outsider (2018)</h1>
@@ -28,7 +37,7 @@
 
       <div class="card">
         <div>
-          <img class="image" src="/Images/tdghuman.jpg" width="400px" height="400px">
+          <img class="image" src="/Images/TDG/tdghuman.jpg" width="400px" height="400px">
         </div>
         <div class="title">
           <h1>Human (2015)</h1>
@@ -42,7 +51,7 @@
 
       <div class="card">
         <div>
-          <img class="image" src="Images/tdgtransit.jpg" width="400px" height="400px">
+          <img class="image" src="Images/TDG/tdgtransit.jpg" width="400px" height="400px">
         </div>
         <div class="title">
           <h1>Transit of Venus (2012)</h1>
@@ -56,7 +65,7 @@
 
       <div class="card">
         <div>
-          <img class="image" src="Images/tdgLife.png" width="400px" height="400px">
+          <img class="image" src="Images/TDG/tdgLife.png" width="400px" height="400px">
         </div>
         <div class="title">
           <h1>Life Starts Now (2009)</h1>
@@ -70,7 +79,7 @@
 
       <div class="card">
         <div>
-          <img class="image" src="Images/tdgOne_X.png" width="400px" height="400px">
+          <img class="image" src="Images/TDG/tdgOne_X.png" width="400px" height="400px">
         </div>
         <div class="title">
           <h1>One X (2006)</h1>
@@ -84,7 +93,7 @@
 
       <div class="card">
         <div>
-          <img class="image" src="Images/tdgselftitled.jpeg" width="400px" height="400px">
+          <img class="image" src="Images/TDG/tdgselftitled.jpeg" width="400px" height="400px">
         </div>
         <div class="title">
           <h1>Three Days Grace (2003)</h1>
@@ -95,8 +104,6 @@
         </div>
       </div>
       <!--cards -->
-      <br>
 
-     <button onclick="window.location.href='/contact2.html'"> Continue </button>
   </body>
 </html>
